<resources>

    <!--    login-->
    <string name="app_name">Attendance Monitor</string>
    <string name="login_username_hint">Enter your Username</string>
    <string name="login_password_hint">Enter Your Password</string>
    <string name="login_username_helper">You May Use Your Email</string>

    <!--    bottom navigation-->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_generate">Generate</string>
    <string name="nav_consult">Consult</string>
    <string name="nav_classes">Classes</string>

    <!--    placer hodler-->
    <string name="username">Angela2020</string>
    <string name="job_title">Web Development Professor</string>
    <string name="first_name">Angela</string>
    <string name="last_name">Mose</string>
    <string name="university">Harvard University</string>
    <string name="email">Angela2020@pm.me</string>
    <string name="password">Helloworld</string>
    <string name="phone">+212611223344</string>

    <!-- generate UI -->
    <string name="generate_title">Generate Qr Code</string>
    <string-array name="aClasses">
        <item>Genie Info</item>
        <item>Genie Reseau</item>
        <item>Genie Electrique</item>
        <item>Genie Procede et Energie</item>
        <item>Genie Science et donnee</item>
    </string-array>

    <string name="search_input_hint">Type to filter …</string>

    <!-- aClasses UI -->
    <string name="cl_header_title">Classrooms</string>
    <string name="cl_header_subtitle">List of classroom you have
        create</string>
    <string name="filter_classes_hint">Classe name, subject, Date</string>

    <!-- students list fragment-->
    <string name="st_header_title">Student</string>
    <string name="st_header_subtitle">List of student in this aClasses</string>
    <string name="points">Points</string>
    <string name="joined">Joined</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>

<!--    stats ui-->
    <string name="stats_title">Statistics</string>
    <string name="stats_subtitle">Detailed informations about your
        aClasses</string>

<!--    jutificatin ui-->
    <string name="js_header_title">Justifications</string>
    <string name="js_header_subtitle">The provided justification
        documents</string>
    <string name="js_subheader_label">Presence Rate:</string>
</resources>
