<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_profile">

    <!-- header -->
    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_pc"
                app:civ_border_color="@color/colorBackground"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10dp"
                app:civ_shadow_color="#3f51b5"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:text="@string/username"
                android:textColor="#fafafa"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:layout_below="@+id/username"
                android:text="@string/job_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_general_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/colorAccent"
                app:fabSize="mini"
                android:src="@drawable/ic_edit_white_24dp"
                android:tint="@color/colorBackground"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

    <!-- first card view -->
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- side bar -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="15dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:rotation="-90"
                    android:text="USER"
                    android:textColor="#fafafa"/>
            </LinearLayout>

            <!-- card content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="20dp"
                    android:text="First Name" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/first_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="20dp"
                    android:text="Last Name" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/last_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="20dp"
                    android:text="University" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/university" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    <!-- second card view -->
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@+id/user_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- side bar -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:rotation="-90"
                    android:textColor="#fafafa"
                    android:text="ACCOUNT" />
            </LinearLayout>

            <!-- card content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="20dp"
                    android:text="Email" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextPrimary"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/email" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="20dp"
                    android:text="Password" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextPrimary"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/password" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:paddingVertical="5dp"
                    android:paddingLeft="20dp"
                    android:text="Phone Number" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/colorTextPrimary"
                    android:paddingStart="20dp"
                    android:textSize="20sp"
                    android:text="@string/phone" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
</androidx.constraintlayout.widget.ConstraintLayout>